FIX jump on mobile

--- a/src/components/game-frame/game-frame.css
+++ b/src/components/game-frame/game-frame.css
@@ -1,4 +1,38 @@
+.game-frame-wrapper {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
 .game-frame {
-    position: absolute;
-    top: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.tappable-controls {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
+.tappable-controls .left {
+  float: left;
+  width: 50%;
+  height: 100%;
+  display: inline-block;
+  position: absolute;
+  z-index: 17;
+  opacity: 0.1;
+}
+
+.tappable-controls .right {
+  float: right;
+  width: 50%;
+  height: 100%;
+  display: inline-block;
+  position: absolute;
+  z-index: 17;
+  right: 0;
+  opacity: 0.1;
 }
